@@ -17,6 +17,7 @@ The following list contains all changes to pgAdmin3, as present in cvs.
 </ul>
 <br>
 <ul>
+    <li>2005-06-19 AP        pgAgent moved under server, some more fixes
     <li>2005-06-19 AP        further translation issues
     <li>2005-06-17 AP        reduce translation nightmare
     <li>2005-06-17 AP        use wxDatePickCtrl for wxCalendarBox
